tests/baselines/reference/computedPropertyNames8_ES6(strict=true).errors.txt
computedPropertyNames8_ES6.ts(5,9): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
computedPropertyNames8_ES6.ts(5,10): error TS2454: Variable 't' is used before being assigned.
computedPropertyNames8_ES6.ts(6,10): error TS2454: Variable 'u' is used before being assigned.


==== computedPropertyNames8_ES6.ts (3 errors) ====
    function f<T, U extends string>() {
        var t: T;
        var u: U;
        var v = {
            [t]: 0,
            ~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
             ~
!!! error TS2454: Variable 't' is used before being assigned.
            [u]: 1
             ~
!!! error TS2454: Variable 'u' is used before being assigned.
        };
    }